--- a/UOWConsult/Base.lproj/Main.storyboard
+++ b/UOWConsult/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="aZg-oV-lCC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="MMA-Kt-Vi1">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -937,7 +937,7 @@
                                                         <constraint firstAttribute="height" constant="30" id="1ms-KC-WPu"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                 </textField>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Retype to confirm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zFG-VD-hdp">
                                                     <rect key="frame" x="146" y="45" width="431" height="30"/>
@@ -945,7 +945,7 @@
                                                         <constraint firstAttribute="height" constant="30" id="uLK-K0-UpF"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                 </textField>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Retype Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uDq-Ih-Y9z">
                                                     <rect key="frame" x="8" y="48" width="132" height="21"/>
@@ -999,13 +999,15 @@
                     <navigationItem key="navigationItem" title="Settings" id="UBG-DD-t4y">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="cIv-4k-dmW">
                             <connections>
-                                <action selector="saveButtonPressed:" destination="kq2-rE-AGf" id="dKB-Ke-8wv"/>
+                                <action selector="saveButtonPressed:" destination="kq2-rE-AGf" id="kgP-6b-cNg"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="newPassword" destination="mWg-ns-jDb" id="RCZ-kD-i1n"/>
+                        <outlet property="confirmPassword" destination="zFG-VD-hdp" id="H5t-Y0-MKp"/>
+                        <outlet property="newPassword" destination="fT0-qg-qkr" id="U4h-bF-OwD"/>
+                        <outlet property="newUsername" destination="mWg-ns-jDb" id="bjC-NQ-9eM"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Ez-3q-NWQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
